[gd_scene load_steps=41 format=3 uid="uid://dxvvlck8lej3f"]

[ext_resource type="Environment" uid="uid://jvmpkdwaeaq" path="res://scenes/main-environment.tres" id="1_q8fpv"]
[ext_resource type="PackedScene" uid="uid://dl2ed4gkybggf" path="res://objects/player.tscn" id="2_elriq"]
[ext_resource type="Script" uid="uid://by0qn28x1i1jj" path="res://scripts/hud.gd" id="3_s8mkj"]
[ext_resource type="Script" uid="uid://dg01pkkc1c5vd" path="res://scripts/weapon.gd" id="3_trceg"]
[ext_resource type="Resource" uid="uid://bds2lhxkasyh3" path="res://weapons/babyblaster.tres" id="4_a8y0u"]
[ext_resource type="Resource" uid="uid://c56y8pqoyk15f" path="res://weapons/blaster.tres" id="5_jkv2x"]
[ext_resource type="Resource" uid="uid://cu2gtxlcmbb34" path="res://weapons/blaster-repeater.tres" id="6_jbj1t"]
[ext_resource type="Script" uid="uid://cjmpchbcxyqh6" path="res://addons/godotvmf/src/vmf_node.gd" id="7_85g3d"]
[ext_resource type="Resource" uid="uid://cipvtara42tpx" path="res://weapons/superblaster.tres" id="7_muem4"]
[ext_resource type="PackedScene" uid="uid://d2g78tpqbyf5g" path="res://objects/enemy.tscn" id="8_7ty2f"]
[ext_resource type="ArrayMesh" uid="uid://bgkrjkpxwnspr" path="res://geometry/godotmap1_vmf_import.mesh" id="8_choun"]
[ext_resource type="LabelSettings" uid="uid://dy5ecelk2tcjh" path="res://fonts/main_font.tres" id="9_jscy8"]
[ext_resource type="Shape3D" uid="uid://toakdbdoymgg" path="res://geometry/godotmap1_vmf_collision_surface_prop_default.res" id="9_ya4ey"]
[ext_resource type="Texture2D" uid="uid://cpxour8a7ihec" path="res://icon.png" id="10_pm3ni"]
[ext_resource type="PackedScene" uid="uid://bccwvlemredbt" path="res://objects/big_enemy.tscn" id="11_a8y0u"]
[ext_resource type="FontFile" uid="uid://brilqc8nb0env" path="res://fonts/texgyreadventor-regular.otf" id="11_y6deb"]
[ext_resource type="Script" uid="uid://bq7bocqfp8ivg" path="res://objects/resupply.gd" id="15_jbj1t"]
[ext_resource type="PackedScene" uid="uid://bxjujrxi2ormu" path="res://objects/big_bullet.tscn" id="15_tel4y"]
[ext_resource type="Texture2D" uid="uid://c6770lsxhxfvw" path="res://materials/ammo1.png" id="16_muem4"]
[ext_resource type="Texture2D" uid="uid://nf5nhm0bsdth" path="res://materials/ammo2.png" id="17_dp3eg"]
[ext_resource type="Texture2D" uid="uid://kdmi2skd1htj" path="res://sprites/tp1.png" id="18_0ld40"]
[ext_resource type="Script" uid="uid://chsc23s3l36f0" path="res://objects/tp.gd" id="18_gqmmt"]
[ext_resource type="Texture2D" uid="uid://dophwnys1qsdp" path="res://sprites/tp2.png" id="19_gqmmt"]
[ext_resource type="Texture2D" uid="uid://dxd7k2w5ixnmq" path="res://sprites/coin1.png" id="21_jscy8"]
[ext_resource type="Texture2D" uid="uid://dxfmh51e8b0ph" path="res://sprites/coin2.png" id="22_pm3ni"]
[ext_resource type="Script" uid="uid://ukxui1v3rlrf" path="res://objects/coin.gd" id="23_og1vs"]
[ext_resource type="PackedScene" uid="uid://dcartkp2gx554" path="res://objects/superblaster.tscn" id="26_2wyq8"]
[ext_resource type="Script" uid="uid://d4gutj58celif" path="res://objects/ssg.gd" id="26_vxglm"]
[ext_resource type="AudioStream" uid="uid://3w8ih36begok" path="res://sounds/acheivement_get.ogg" id="28_2f3dj"]
[ext_resource type="Script" uid="uid://cr3qqoes6btp0" path="res://scenes/chaingun.gd" id="29_fv21b"]
[ext_resource type="PackedScene" uid="uid://cvervjf8gggum" path="res://objects/blaster_repeater.tscn" id="30_tel4y"]
[ext_resource type="AudioStream" uid="uid://pwh0vch3y31k" path="res://sounds/music.ogg" id="32_qkpxi"]

[sub_resource type="LabelSettings" id="LabelSettings_og1vs"]
font = ExtResource("11_y6deb")
font_size = 36
outline_size = 12
outline_color = Color(0.42352942, 0.4392157, 0.98039216, 0.4509804)
shadow_offset = Vector2(2, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_a8y0u"]

[sub_resource type="SpriteFrames" id="SpriteFrames_jkv2x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_muem4")
}, {
"duration": 1.0,
"texture": ExtResource("17_dp3eg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SphereShape3D" id="SphereShape3D_gqmmt"]

[sub_resource type="SpriteFrames" id="SpriteFrames_yc10j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("21_jscy8")
}, {
"duration": 1.0,
"texture": ExtResource("22_pm3ni")
}],
"loop": true,
"name": &"default",
"speed": 7.5
}]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_muem4"]

[sub_resource type="SpriteFrames" id="SpriteFrames_muem4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_0ld40")
}, {
"duration": 1.0,
"texture": ExtResource("19_gqmmt")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SphereShape3D" id="SphereShape3D_og1vs"]

[node name="Main" type="Node3D"]
metadata/_edit_horizontal_guides_ = [591.0]
metadata/_edit_vertical_guides_ = [430.0, 1030.0, 903.0, 640.0, 300.0]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("1_q8fpv")

[node name="Player" parent="." node_paths=PackedStringArray("crosshair") instance=ExtResource("2_elriq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2)
movement_speed = 10
number_of_jumps = 1
jump_strength = 10
weapons = Array[ExtResource("3_trceg")]([ExtResource("4_a8y0u"), ExtResource("5_jkv2x"), ExtResource("7_muem4"), ExtResource("6_jbj1t")])
crosshair = NodePath("../HUD/Crosshair")

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.42261794, -0.6942719, 0.58256376, 0, 0.64278793, 0.7660442, -0.9063079, 0.32374403, -0.27165374, 0, 2.076825, 0)
shadow_enabled = true
shadow_opacity = 0.75

[node name="HUD" type="CanvasLayer" parent="."]
follow_viewport_enabled = true
script = ExtResource("3_s8mkj")

[node name="ColorRect" type="ColorRect" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = 200.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5137255)

[node name="Crosshair" type="TextureRect" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.35, 0.35)
pivot_offset = Vector2(64, 64)

[node name="Health" type="Label" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -556.0
offset_top = 231.0
offset_right = -210.0
offset_bottom = 277.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 1
text = "Health: 100%"
label_settings = ExtResource("9_jscy8")
horizontal_alignment = 2

[node name="Ammo" type="Label" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 263.0
offset_top = 231.0
offset_right = 615.0
offset_bottom = 277.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 1
label_settings = ExtResource("9_jscy8")
vertical_alignment = 1

[node name="Coins" type="Label" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 263.0
offset_top = 281.0
offset_right = 615.0
offset_bottom = 327.0
grow_horizontal = 2
grow_vertical = 2
text = "Coins: 0"
label_settings = ExtResource("9_jscy8")

[node name="TextureRect2" type="ColorRect" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = 220.0
offset_right = 100.0
offset_bottom = 380.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.75, 0.75)
color = Color(0.5882353, 0.5882353, 1, 0.2627451)

[node name="TextureRect" type="TextureRect" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = 232.0
offset_right = 80.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.75, 0.75)
texture = ExtResource("10_pm3ni")
expand_mode = 3

[node name="Health2" type="Label" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -556.0
offset_top = 281.0
offset_right = -210.0
offset_bottom = 327.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 1
text = "Situation: Normal"
label_settings = SubResource("LabelSettings_og1vs")
horizontal_alignment = 2

[node name="Enemies" type="Node" parent="."]

[node name="enemy-flying" parent="Enemies" node_paths=PackedStringArray("player") instance=ExtResource("8_7ty2f")]
transform = Transform3D(0.51974034, 0.0008659344, 0.8543239, 0.045297787, 0.99856496, -0.028569622, -0.8531225, 0.053547826, 0.5189553, 19.899832, 0.08140552, 1.3770478)
player = NodePath("../../Player")

[node name="enemy-flying2" parent="Enemies" node_paths=PackedStringArray("player") instance=ExtResource("8_7ty2f")]
transform = Transform3D(0.9829465, -0.015303165, 0.18325496, -0.047537044, 0.94151425, 0.33360368, -0.17764236, -0.33662593, 0.92473036, 59.276417, 2.4907267, 5.6301165)
player = NodePath("../../Player")

[node name="enemy-flying3" parent="Enemies" node_paths=PackedStringArray("player") instance=ExtResource("8_7ty2f")]
transform = Transform3D(-0.9666797, -0.035439927, 0.25352347, -0.038656365, 0.9992228, -0.0077148094, -0.25305295, -0.017257955, -0.9672984, 59.276417, 2.4907267, 2.493379)
player = NodePath("../../Player")

[node name="enemy-flying4" parent="Enemies" node_paths=PackedStringArray("player") instance=ExtResource("8_7ty2f")]
transform = Transform3D(0.05050393, -0.22625534, -0.97275776, -0.028213471, 0.97328895, -0.22784369, 0.9983251, 0.0389518, 0.042771395, 79.5193, 12.48521, 3.9769266)
player = NodePath("../../Player")

[node name="enemy-flying5" parent="Enemies" node_paths=PackedStringArray("player") instance=ExtResource("8_7ty2f")]
transform = Transform3D(0.054062076, -0.8913245, -0.45013124, 0.020589793, 0.45168987, -0.8919375, 0.9983251, 0.0389518, 0.042771395, 94.41943, 26.512522, 3.9769266)
player = NodePath("../../Player")

[node name="enemy-flying6" parent="Enemies" node_paths=PackedStringArray("player") instance=ExtResource("8_7ty2f")]
transform = Transform3D(-0.9997398, 0.0005559921, -0.022796756, -0.0001813462, 0.9994775, 0.03232479, 0.022802887, 0.03232062, -0.99921745, 60.692116, 20.809746, 0.13044143)
player = NodePath("../../Player")

[node name="enemy-flying7" parent="Enemies" node_paths=PackedStringArray("player") instance=ExtResource("8_7ty2f")]
transform = Transform3D(0.018645668, -0.032315895, 0.99930376, -0.00018134614, 0.9994775, 0.03232479, -0.99982595, -0.0007838436, 0.018630145, 60.692116, 20.809746, 13.539549)
player = NodePath("../../Player")

[node name="enemy-flying8" parent="Enemies" node_paths=PackedStringArray("player") instance=ExtResource("8_7ty2f")]
transform = Transform3D(0.018645668, -0.032315895, 0.99930376, -0.00018134614, 0.9994775, 0.03232479, -0.99982595, -0.0007838436, 0.018630145, 45.998608, 20.809746, 2.8773394)
player = NodePath("../../Player")

[node name="enemy-flying9" parent="Enemies" node_paths=PackedStringArray("player") instance=ExtResource("8_7ty2f")]
transform = Transform3D(0.018645668, -0.032315895, 0.99930376, 0.116193034, 0.9927756, 0.029936658, -0.9930515, 0.11555407, 0.022265913, 45.998608, 20.766335, 1.499389)
player = NodePath("../../Player")

[node name="enemy-flying10" parent="Enemies" node_paths=PackedStringArray("player") instance=ExtResource("8_7ty2f")]
transform = Transform3D(0.018645668, -0.032315895, 0.99930376, -0.16703898, 0.9853298, 0.03498063, -0.9857739, -0.16757487, 0.012974213, 45.998608, 21.34367, 2.3193438)
player = NodePath("../../Player")

[node name="big-enemy-flying" parent="Enemies" node_paths=PackedStringArray("player") instance=ExtResource("11_a8y0u")]
transform = Transform3D(0.22264458, 0.5551203, 0.801418, -0.14859217, 0.83177006, -0.5348634, -0.9635091, 0, 0.26767564, 0, 26.22204, 0)
player = NodePath("../../Player")
Bullet = ExtResource("15_tel4y")

[node name="Level" type="Node" parent="."]

[node name="VMFNode" type="Node3D" parent="Level"]
script = ExtResource("7_85g3d")
vmf = "res://mapsrc/godotmap1.vmf"
metadata/_custom_type_script = "uid://cjmpchbcxyqh6"

[node name="Entities" type="Node3D" parent="Level/VMFNode"]

[node name="Geometry" type="MeshInstance3D" parent="Level/VMFNode"]
mesh = ExtResource("8_choun")

[node name="surface_prop_default" type="StaticBody3D" parent="Level/VMFNode/Geometry"]
metadata/surface_prop = "default"

[node name="collision" type="CollisionShape3D" parent="Level/VMFNode/Geometry/surface_prop_default"]
shape = ExtResource("9_ya4ey")

[node name="Resupply" type="Area3D" parent="Level" node_paths=PackedStringArray("player")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.0077224, 1.5289316, -3.6103284)
script = ExtResource("15_jbj1t")
player = NodePath("../../Player")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Level/Resupply"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0.5078633, 0)
shape = SubResource("CylinderShape3D_a8y0u")

[node name="Sprite3D" type="AnimatedSprite3D" parent="Level/Resupply"]
pixel_size = 0.005
billboard = 1
sprite_frames = SubResource("SpriteFrames_jkv2x")

[node name="Timer" type="Timer" parent="Level/Resupply"]
wait_time = 0.1
one_shot = true

[node name="Resupply2" type="Area3D" parent="Level" node_paths=PackedStringArray("player")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 45.446518, 22.156618, 14.957723)
script = ExtResource("15_jbj1t")
player = NodePath("../../Player")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Level/Resupply2"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0.5078633, 0)
shape = SubResource("CylinderShape3D_a8y0u")

[node name="Sprite3D" type="AnimatedSprite3D" parent="Level/Resupply2"]
pixel_size = 0.005
billboard = 1
sprite_frames = SubResource("SpriteFrames_jkv2x")

[node name="Timer" type="Timer" parent="Level/Resupply2"]
wait_time = 0.1
one_shot = true

[node name="Coin" type="Area3D" parent="Level"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 40, -4.391259, 2.351065)
script = ExtResource("23_og1vs")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Level/Coin"]
shape = SubResource("SphereShape3D_gqmmt")

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="Level/Coin"]
billboard = 1
sprite_frames = SubResource("SpriteFrames_yc10j")
autoplay = "default"
frame = 1
frame_progress = 0.42070758

[node name="Coin2" type="Area3D" parent="Level"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 40.702988, 21.083263, 6.25872)
script = ExtResource("23_og1vs")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Level/Coin2"]
shape = SubResource("SphereShape3D_gqmmt")

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="Level/Coin2"]
billboard = 1
sprite_frames = SubResource("SpriteFrames_yc10j")
autoplay = "default"
frame = 1
frame_progress = 0.42070758

[node name="Tp1" type="Node" parent="Level"]

[node name="Tp" type="Area3D" parent="Level/Tp1" node_paths=PackedStringArray("dest")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 37, -4, 4)
script = ExtResource("18_gqmmt")
dest = NodePath("../Dest1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Level/Tp1/Tp"]
shape = SubResource("CylinderShape3D_muem4")

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="Level/Tp1/Tp"]
transparency = 0.6
billboard = 1
sprite_frames = SubResource("SpriteFrames_muem4")
autoplay = "default"
frame = 1
frame_progress = 0.8368172

[node name="Dest1" type="Marker3D" parent="Level/Tp1"]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 40, 1, 4)

[node name="SSG" type="Node3D" parent="Level" node_paths=PackedStringArray("Jingle")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.1490064, 21.294527, 10.417404)
script = ExtResource("26_vxglm")
Jingle = NodePath("../../Jingle")

[node name="Area3D" type="Area3D" parent="Level/SSG"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Level/SSG/Area3D"]
transform = Transform3D(0.91636276, 0, -0.40034902, 0, 1, 0, 0.40034902, 0, 0.91636276, 0, 0, 0)
shape = SubResource("SphereShape3D_og1vs")

[node name="blaster" parent="Level/SSG" instance=ExtResource("26_2wyq8")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, -0.2, 0)

[node name="Chaingun" type="Node3D" parent="Level" node_paths=PackedStringArray("Jingle")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.1490064, 21.294527, -9.785845)
script = ExtResource("29_fv21b")
Jingle = NodePath("../../Jingle")

[node name="Area3D" type="Area3D" parent="Level/Chaingun"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Level/Chaingun/Area3D"]
shape = SubResource("SphereShape3D_og1vs")

[node name="blaster-repeater" parent="Level/Chaingun" instance=ExtResource("30_tel4y")]
transform = Transform3D(0.4894337, 0, 0.10224802, 0, 0.5, 0, -0.10224802, 0, 0.4894337, 0, -0.2, 0)

[node name="Jingle" type="AudioStreamPlayer" parent="."]
stream = ExtResource("28_2f3dj")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("32_qkpxi")
volume_db = -12.0
parameters/looping = true

[connection signal="ammo_updated" from="Player" to="HUD" method="_on_player_ammo_updated"]
[connection signal="coins_updated" from="Player" to="HUD" method="_on_player_coins_updated"]
[connection signal="drain_updated" from="Player" to="HUD" method="_on_player_drain_updated"]
[connection signal="health_updated" from="Player" to="HUD" method="_on_health_updated"]
[connection signal="body_entered" from="Level/Resupply" to="Level/Resupply" method="_on_player_resupply"]
[connection signal="timeout" from="Level/Resupply/Timer" to="Level/Resupply" method="_on_timer_timeout"]
[connection signal="body_entered" from="Level/Resupply2" to="Level/Resupply2" method="_on_player_resupply"]
[connection signal="timeout" from="Level/Resupply2/Timer" to="Level/Resupply2" method="_on_timer_timeout"]
[connection signal="body_entered" from="Level/Coin" to="Level/Coin" method="_on_body_entered"]
[connection signal="body_entered" from="Level/Coin2" to="Level/Coin2" method="_on_body_entered"]
[connection signal="body_entered" from="Level/Tp1/Tp" to="Level/Tp1/Tp" method="_on_body_entered"]
[connection signal="body_entered" from="Level/SSG/Area3D" to="Level/SSG" method="_on_area_3d_body_entered"]
[connection signal="body_entered" from="Level/Chaingun/Area3D" to="Level/Chaingun" method="_on_area_3d_body_entered"]
